# nospy

./: .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  test.yaml
json/: nbeats.json  nhits.json  tft.json
nospy/: __init__.py  config.py  data.py  evaluation.py  experiment.py  features.py  models.py  plot.py  prompt.py  reconcile.py  utils.py
scripts/: main.py  remote.sh  run_experiment.py  vram.sh
yaml/: llm.yaml  run.yaml  test.yaml
